# ursadb

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  Benchmark.cpp  BitmapIndexBuilder.cpp  BitmapIndexBuilder.h  CMakeLists.txt  Command.cpp  Command.h  Core.h  Daemon.cpp  Daemon.h  Database.cpp  Database.h  DatabaseHandle.cpp  DatabaseHandle.h  DatabaseSnapshot.cpp  DatabaseSnapshot.h  DatasetBuilder.cpp  DatasetBuilder.h  Dockerfile  ExclusiveFile.cpp  ExclusiveFile.h  FlatIndexBuilder.cpp  FlatIndexBuilder.h  INSTALL.md  IndexBuilder.cpp  IndexBuilder.h  Indexer.cpp  Indexer.h  Json.h  LICENSE  MemMap.cpp  MemMap.h  NetworkService.cpp  NetworkService.h  NewDatabase.cpp  OnDiskDataset.cpp  (+50 more)
.github/workflows/: build_deb.yml  coverity-scan.yml  push_hub.yml  test_code.yml  test_experiments.yml
cmake/: ClangFormat.cmake  IPOEnableOnRelease.cmake
contrib/: install_deb.sh
contrib/systemd/: ursadb.service
deploy/: deploy.json
deploy/docker/: Dockerfile
deploy/k8s/: ursadb.yml
docs/: README.md  configuration.md  dataset.graphml  datasets copy.md  datasets.md  indexing.md  indextypes.md  install.md  limits.md  new_release.md  ondiskformat.md  start.md  syntax.md
e2e-correctness-tests/: Dockerfile  README.md  generate_queries.py  requirements.txt  test_ursa_query.py  yara_direct.py  yaraparse.py
e2e-correctness-tests/testdata/: anonymous_strings  conditions  hex_alternatives  hex_jumps  hex_simple_rule  hex_wild_cards  lightdart_apt1  private_strings  referencing_rules
e2e-correctness-tests/testfiles/: conditions  hex_alternatives  hex_jumps  hex_simple_rule  hex_wild_cards  private_strings  referencing_rules  referencing_rules2
e2e-correctness-tests/yararules/: APT17_Sample_FXSST_DLL.txt  BlackRev.txt  Njrat.txt  anonymous_strings  anonymous_strings.txt  apt17  hancitor  malw_blackrev  malw_bublik  malw_bublik.txt  malw_hancitor.txt  negative  negative.txt  network_traffic_njRAT  network_traffic_njRAT.txt  rat_asyncrat  rat_asyncrat.txt  rat_njrat  win_exe_njRAT  win_exe_njRAT.txt
libursa/: BitmapIndexBuilder.cpp  BitmapIndexBuilder.h  CMakeLists.txt  Command.h  Core.cpp  Core.h  Daemon.cpp  Daemon.h  Database.cpp  Database.h  DatabaseConfig.cpp  DatabaseConfig.h  DatabaseHandle.cpp  DatabaseHandle.h  DatabaseLock.cpp  DatabaseLock.h  DatabaseName.cpp  DatabaseName.h  DatabaseSnapshot.cpp  DatabaseSnapshot.h  DatabaseUpgrader.cpp  DatabaseUpgrader.h  DatasetBuilder.cpp  DatasetBuilder.h  ExclusiveFile.cpp  ExclusiveFile.h  FeatureFlags.h  FlatIndexBuilder.cpp  FlatIndexBuilder.h  Indexer.cpp  Indexer.h  IoPrio.cpp  IoPrio.h  Json.h  Makefile  MemMap.cpp  MemMap.h  OnDiskDataset.cpp  OnDiskDataset.h  OnDiskFileIndex.cpp  (+32 more)
src/: Benchmark.cpp  CMakeLists.txt  Catch.h  Client.cpp  Client.h  Compact.cpp  Daemon.cpp  Daemon.h  Environment.cpp  Environment.h  Index.cpp  NetworkService.cpp  NetworkService.h  NewDatabase.cpp  Tests.cpp  Trim.cpp
test/: CGVR.txt  EKWA.txt  GJND.txt  GRLZ.txt  HFFZ.txt  IJKZ.txt  IPVX.txt  ISLT.txt  JIDQ.txt  MLUU.txt  NSGG.txt  QTXN.txt  TJUI.txt  UBZO.txt  UQXT.txt  WCJI.txt  WEEC.txt  XLLG.txt  YHNL.txt  ZXLT.txt  test1.txt  test10.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt  test7.txt  test8.txt  test9.txt
teste2e/: test_config.py  test_core.py  test_format_upgrades.py  test_indexing.py  test_iterators.py  test_memory_limits.py  test_merge.py  test_reindex.py  test_sanity.py  test_select.py  test_stability_iterators.py  test_stability_merge.py  test_stability_status.py  test_ursadb.py  util.py
